# MiniKern

./: Cargo.toml  README.md
src/: auth.rs  main.rs  terminal.rs
src/commands/: addusr.rs  chusr.rs  delusr.rs  listusr.rs  mod.rs
